##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_reactome
version = 0.2.4-dev
description = A package for converting Reactome gene sets and chemical sets into BEL
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/reactome
download_url = https://github.com/bio2bel/reactome/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/reactome/issues
    Source Code = https://github.com/bio2bel/reactome

# Author information
author = Daniel Domingo-Fernández and Charles Tapley Hoyt
author_email = daniel.domingo.fernandez@scai.fraunhofer.de and cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Biological Expression Language
    BEL
    Systems Biology
    reactome

[options]
install_requires =
    pybel>=0.14.9,<0.15.0
    click
    bio2bel[web]>=0.3.8,<0.4.0
    pyobo>=0.2.2
    tqdm
    sqlalchemy
    requests
    pandas

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
bio2bel =
    reactome = bio2bel_reactome
compath =
    reactome = bio2bel_reactome
console_scripts =
    bio2bel_reactome = bio2bel_reactome.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_reactome
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/bio2bel_reactome
    .tox/*/lib/python*/site-packages/bio2bel_reactome

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
